fix: align center product image and product title

--- a/packages/core/src/components/account/orders/MyAccountOrderDetails/MyAccountDeliveryOptionAccordion/styles.scss
+++ b/packages/core/src/components/account/orders/MyAccountOrderDetails/MyAccountDeliveryOptionAccordion/styles.scss
@@ -78,6 +78,7 @@
       [data-fs-delivery-option-accordion-product-top] {
         display: flex;
         gap: var(--fs-spacing-3);
+        align-items: center;
         width: 100%;
       }
 
